--- a/etapa1.html
+++ b/etapa1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pesquisar Consulta</title>
+    <link rel="stylesheet" href="public/css/test.css">
 </head>
 <body>
     <h2>Buscar Paciente</h2>
